--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <script src="p5.play.js"></script>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyD6oVjtrWiSZlD_lsFji8faxGH9UwDeNNY",
-    authDomain: "pro-project-c-34.firebaseapp.com",
-    databaseURL: "https://pro-project-c-34.firebaseio.com",
-    projectId: "pro-project-c-34",
-    storageBucket: "pro-project-c-34.appspot.com",
-    messagingSenderId: "598019059600",
-    appId: "1:598019059600:web:b6072995a6ef91f4aecd15"
+    apiKey: "AIzaSyA3rdAxBuCAcdIc4M86BIzvdePIh5ldRyo",
+    authDomain: "virtual-pet-2-7f19d.firebaseapp.com",
+    databaseURL: "https://virtual-pet-2-7f19d.firebaseio.com",
+    projectId: "virtual-pet-2-7f19d",
+    storageBucket: "virtual-pet-2-7f19d.appspot.com",
+    messagingSenderId: "362009010300",
+    appId: "1:362009010300:web:8d6f4ef1d77d3e2bb0a9f9"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
